--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Image Upload Lesson!</title>
     <link rel="icon" type="image/x-icon" href="./src/assets/favicon.ico">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
