--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">HELLO!</div>
 
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/9e24421ae4.js" crossorigin="anonymous"></script>
     <!-- project JavaScript -->
-    <script type="module" src="./src/main.jsx"></script>
+    <!-- <script type="module" src="./src/main.jsx"></script> -->
   </body>
 </html>
